--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <head>
             <title>Random wish</title>
             <meta charset="UTF-8">
-            <link href="resources\css\style.css" rel="stylesheet"/>
+            <link href="style.css" rel="stylesheet"/>
         </head>
         <body>
         <section class="top">
@@ -35,7 +35,7 @@
                     <div class="box1">
                     <img src="https://beolin.club/uploads/posts/2022-10/1664858922_10-beolin-club-p-zerkaltse-risunok-vkontakte-13.png"/>
                     <div class="row">
-                        <img src="c:\Users\Hakob\Downloads\hd-white-line-art-drawn-arrow-pointing-right-png-31624577952hdmfooqxui-removebg-preview.png"/>
+                        <img src="hd-white-line-art-drawn-arrow-pointing-right-png-31624577952hdmfooqxui-removebg-preview.png"/>
                         <p>Если не видно сбавь яркость и посмотри сюда)</p>
                        </div>
                     </div>
