--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <section class="top">
             <nav>
                 <div>
-                <img src="c:\Users\Hakob\Downloads\images-removebg-preview.png">
+                <img src="images-removebg-preview.png">
                 <p>RandomWish</p>
                 </div>
                 <p>For my ❤️</p>
